manifests/namespaces.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": ${app_name},
    "labels": {
      "name": ${app_name}
    }
  }
}
