manifests/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${app_name}-api-deployment
  namespace: ${app_name}
  labels:
    app: ${app_name}
spec:
  replicas: ${api_server_deployment_replica_count}
  selector:
    matchLabels:
      app: ${app_name}
  template:
    metadata:
      labels:
        app: ${app_name}
    spec:
      containers:
      - name: ${app_name}-api
        image: registry.digitalocean.com/${app_name}/api:${api_server_deployment_image_tag}
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: docker-cfg
