manifests/auth_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${app_name}-auth-deployment
  namespace: ${app_name}
  labels:
    app: ${app_name}-auth
spec:
  replicas: ${auth_server_deployment_replica_count}
  selector:
    matchLabels:
      app: ${app_name}-auth
  template:
    metadata:
      labels:
        app: ${app_name}-auth
    spec:
      containers:
      - name: ${app_name}-auth
        image: registry.digitalocean.com/${app_name}/auth:${auth_server_deployment_image_tag}
        ports:
        - containerPort: 3001
      imagePullSecrets:
      - name: docker-cfg
