manifests/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${app_name}-api-service
  namespace: ${app_name}
  labels:
    app: ${app_name}
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: ${app_name}
