manifests/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${app_name}-frontend-service
  namespace: ${app_name}
  labels:
    app: ${app_name}-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ${app_name}-frontend
