manifests/prerender_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${app_name}-prerender-service
  namespace: ${app_name}
  labels:
    app: ${app_name}-prerender
spec:
  type: ClusterIP
  ports:
  - port: 3003
    targetPort: 3003
  selector:
    app: ${app_name}-prerender
