manifests/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${app_name}-ingress
  namespace: ${app_name}
  labels:
    app: ${app_name}
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
  - hosts:
    - ${domain_prefix}api.${app_name}.com
    - ${domain_prefix}auth.${app_name}.com
    - ${frontend_subdomain}${app_name}.com
    - www.${frontend_subdomain}${app_name}.com
    secretName: ${app_name}-tls
  rules:
  - host: "${domain_prefix}api.${app_name}.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${app_name}-api-service
            port:
              number: 3001
  - host: "${domain_prefix}auth.${app_name}.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${app_name}-auth-service
            port:
              number: 3000
  - host: "${frontend_subdomain}${app_name}.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${app_name}-frontend-service
            port:
              number: 80
  - host: "www.${frontend_subdomain}${app_name}.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${app_name}-frontend-service
            port:
              number: 80
